src/objects/Aero_China_Kaizen__c/Aero_China_Kaizen__c.object-meta.xml
<CustomObject>
    <description>This object is created for the POC of Aero China team to capture Kaizen as a part of HOS journey and evaluate Force.com platform</description>
    <label>Kaizen</label>
    <nameField>
        <label>Kaizen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kaizens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>