src/objects/Aero_China_Kaizen__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Owner</label>
    <referenceTo>Kaizen_Users__c</referenceTo>
    <relationshipLabel>Kaizens (Action Owner)</relationshipLabel>
    <relationshipName>Kaizens1</relationshipName>
    <type>Lookup</type>
</CustomField>