src/objects/Aero_China_Kaizen__c/fields/Control_Plan__c.field-meta.xml
<CustomField>
    <fullName>Control_Plan__c</fullName>
    <label>Control Plan</label>
    <type>TextArea</type>
</CustomField>