src/objects/Aero_China_Kaizen__c/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <label>Dept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>P&amp;E</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HSE&amp;F</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>