src/objects/Aero_China_Kaizen__c/fields/Kaizen_Level__c.field-meta.xml
<CustomField>
    <fullName>Kaizen_Level__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Kaizen Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>