src/objects/Aero_China_Kaizen__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>Kaizen_Users__c</referenceTo>
    <relationshipLabel>Kaizens</relationshipLabel>
    <relationshipName>Kaizens</relationshipName>
    <type>Lookup</type>
</CustomField>