src/objects/Aero_China_Kaizen__c/recordTypes/Approved.recordType-meta.xml
<RecordType>
    <fullName>Approved</fullName>
    <active>true</active>
    <label>Approved</label>
</RecordType>