src/objects/Aero_China_Kaizen__c/recordTypes/LeaderApproved.recordType-meta.xml
<RecordType>
    <fullName>LeaderApproved</fullName>
    <active>true</active>
    <label>LeaderApproved</label>
</RecordType>