src/objects/Aero_China_Kaizen__c/recordTypes/New_Kaizen.recordType-meta.xml
<RecordType>
    <fullName>New_Kaizen</fullName>
    <active>true</active>
    <label>New Kaizen</label>
</RecordType>