src/objects/Aero_China_Kaizen__c/recordTypes/Under_Review.recordType-meta.xml
<RecordType>
    <fullName>Under_Review</fullName>
    <active>true</active>
    <description>Kaizen Under Review</description>
    <label>Under Review</label>
</RecordType>